# Omanix-Tweaker

./: .anjuta_sym_db.db  Makefile.am~  Makefile.in  README  configure  configure.ac  tweak.list
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/desktop/: Makefile
Debug/icons/: Makefile
Debug/icons/32x32/: Makefile
Debug/icons/48x48/: Makefile
Debug/icons/scalable/: Makefile
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  omanix-tweaker
Debug/src/.deps/: app.Po  database.Po  desktop-info.Po  hardware-info.Po  main.Po  (+3 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
desktop/: Makefile  Makefile.am  Makefile.in  omanixTweaker.desktop  omanixTweaker.desktop.desktop~  tweaker.desktop~
icons/: Makefile  Makefile.am~  Makefile.in
icons/32x32/: Makefile  Makefile.am  Makefile.in
icons/48x48/: Makefile  Makefile.am~  Makefile.in
icons/scalable/: Makefile  Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES.in  ar.po  omanix_tweaker.pot
src/: Makefile.am  Makefile.am~  Makefile.in  app.cc  app.cc~  app.h  app.h~  database.cc  database.cc~  database.h  database.h~  desktop-info.cc  desktop-info.cc~  desktop-info.h  desktop-info.h~  hardware-info.cc  hardware-info.cc~  hardware-info.h  hardware-info.h~  main.cc  main.cc~  mywindow.cc  mywindow.cc~  mywindow.h  mywindow.h~  stringformat.h  stringformat.h~  sysinfo.cc  sysinfo.cc~  sysinfo.h  sysinfo.h~  treeModel.h  treeModel.h~  urls.h  user-info.cc  user-info.cc~  user-info.h  user-info.h~
